--- a/src/App.css
+++ b/src/App.css
@@ -75,15 +75,19 @@
   height: 34px;
 }
 
+.switch-small{
+  width: 40px !important;
+  height: 12px !important;
+}
 
-.switch input {
+.switch input{
   opacity: 0;
   width: 0;
   height: 0;
 }
 
 
-.slider {
+.slider{
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -106,6 +110,11 @@
   -webkit-transition: .4s;
   transition: .4s;
 }
+.slider-small:before{
+  top:0;
+  height: 10px !important;
+  width: 10px !important;
+}
 
 input:checked + .slider {
   background-color: #2196F3;
@@ -121,12 +130,26 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+/* input:checked + .slider-small:before {
+  -webkit-transform: translateX(20px) !important;
+  -ms-transform: translateX(20px) !important;
+  transform: translateX(20px) !important;
+} */
+
 
 .slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
+  border-radius: 50%;
+}
+
+.slider-small.round {
+  border-radius: 10px !important;
+}
+
+.slider-small:before {
   border-radius: 50%;
 }
 
