--- a/src/App.css
+++ b/src/App.css
@@ -47,13 +47,19 @@
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-
+  border-radius: 5px;
   cursor: pointer;
 }
 
 .dark{
   background-color: black;
-  color:white
+  color:white;
+}
+
+.white{
+  background-color: white;
+  color:black;
+  padding: 12px 24px;
 }
 
 .light{
