--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body::-webkit-scrollbar, .scroll::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+body::-webkit-scrollbar-track, .scroll::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0,0,0,0.1);
+}
+body::-webkit-scrollbar-thumb, .scroll::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background: rgba(0,0,0,0.2);
+}
+body::-webkit-scrollbar-thumb:hover, .scroll::-webkit-scrollbar-thumb:hover{
+    background: rgba(0,0,0,0.4);
+}
+body::-webkit-scrollbar-thumb:active, .scroll::-webkit-scrollbar-thumb:active{
+    background: rgba(0,0,0,.9);
 }
 
 @tailwind base;
